:lipstick: :bug:  letter spacing bug fixed

--- a/assets/css/portefolio.css
+++ b/assets/css/portefolio.css
@@ -97,7 +97,7 @@ h1{
 }
 
 header h4{
-  letter-spacing          : 0.1rem;
+  letter-spacing          : 1.3px;
   line-height             : 35px;
 }
 
@@ -122,18 +122,9 @@ header div:nth-of-type(2){
 }
 
 #work img:nth-of-type(1){
-  object-position        : bottom;
+  object-position        : top;
 }
 
-
-/**********************************
-*************SECTION 2*************
-***********************************/
-
-/* #about img{
-  width                   : 300px;
-  height                  : 400px;
-} */
 
 /**********************************
 ***************FOOTER**************
@@ -145,7 +136,7 @@ footer{
 
 footer div{
   text-align              : center;
-  letter-spacing          : 0.1rem;
+  letter-spacing          : 1.3px;
   color                   : white;
 }
 
